web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__from__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "default_db.group\ntake 1\n"
---
SELECT
  *
FROM
  "group"
LIMIT
  1

