web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__from__2.snap
---
source: web/book/tests/documentation/book.rs
expression: "from `artist tracks`\n"
---
SELECT
  *
FROM
  "artist tracks"

